--- a/Proyecto/stylesP.css
+++ b/Proyecto/stylesP.css
@@ -1,13 +1,31 @@
 body{
-   
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23404' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23505'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
-                     
+ background-image: linear-gradient(360deg, green,white, green);
 }
 
-#titulo{
-font-family: cursive;
-font-size: 50px;
-text-align: center;
+#Timg{
+    display: flex;
+    
+    justify-content: center;
+    align-items: center; 
+    
+    box-shadow: #FFFFFF 10px;
+    width: 300px;
+    height: 200px;
+    margin: 0 auto;
+    padding: 1px;
+    
+}
+#Timg img{
+    width: 300px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 2px 2px 2px 1px #000000;
+
+}
+#Timg img:hover{
+    transform: scale(0.9);
+
 }
 footer p{
     text-align: center; 
@@ -20,139 +38,64 @@ footer p{
    display: flex;
     justify-content: center;
 align-items: center;
-   
+   padding: 10px;
 }
 #lSistemas img{
-    width: auto;
-    height: auto;
-    margin: auto auto;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    margin: auto 0;
+       
 }
 .contacto{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
     text-align: center;
 }
-#Timg{
-    display: flex;
-    justify-content: center;
-    align-items: center; 
+
+.contacto img{
+    
+    padding: 12px;
+    margin-left:  auto;
+    margin-right: auto;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
 }
-#mapa{
+.contacto img:hover{
+    filter: opacity(.5);
+    
+}
+#ubicacion{
     display: flex;
     
     justify-content: center;
     align-items: center;
-    width: 90%;
-    height: 30%;
+    width: 100px;
+    height: 100px;
     margin-left: auto;
     margin-right: auto;
+    object-fit: cover;
+}
+
+#ubicacion:hover{
+transform: scale(0.9);
+
+
 }
 .imgITA{
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-}
-h1 {
-    text-align: center;
-}
-
-
-
-#carrusel-caja {
-    -moz-animation: automatizacion 15s infinite linear;
-    -o-animation: automatizacion 15s infinite linear;
-    -webkit-animation: automatizacion 15s infinite linear;
-    animation: automatizacion 15s infinite linear;
-    -webkit-transition: all 0.75s ease;
-    -moz-transition: all 0.75s ease;
-    -ms-transition: all 0.75s ease;
-    -o-transition: all 0.75s ease;
-    transition: all 0.75s ease;
-    height: 500px;
-    width: 300%;
-}
-#carrusel-contenido {
+    flex-wrap: wrap;
     margin: 0 auto;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    gap: 16px;
+    padding: 20px 10px;
 }
-.imagenes{
-    height: 400px;
-    width:50%;
+.imgITA img{
+  
+  object-fit: cover;
+  border-radius: 10px;
 }
-.carrusel-elemento {
-    float: left;
-    width: 33.333%;
-}
-@-moz-keyframes automatizacion {
-    0% {
-        margin-left: 0;
-    }
-    30% {
-        margin-left: 0;
-    }
-    35% {
-        margin-left: -100%;
-    }
-    65% {
-        margin-left: -100%;
-    }
-    70% {
-        margin-left: -200%;
-    }
-    95% {
-        margin-left: -200%;
-    }
-    100% {
-        margin-left: 0;
-    }
-}
-@-webkit-keyframes automatizacion {
-    0% {
-        margin-left: 0;
-    }
-    30% {
-        margin-left: 0;
-    }
-    35% {
-        margin-left: -100%;
-    }
-    65% {
-        margin-left: -100%;
-    }
-    70% {
-        margin-left: -200%;
-    }
-    95% {
-        margin-left: -200%;
-    }
-    100% {
-        margin-left: 0;
-    }
-}
-@keyframes automatizacion {
-    0% {
-        margin-left: 0;
-    }
-    30% {
-        margin-left: 0;
-    }
-    35% {
-        margin-left: -100%;
-    }
-    65% {
-        margin-left: -100%;
-    }
-    70% {
-        margin-left: -200%;
-    }
-    95% {
-        margin-left: -200%;
-    }
-    100% {
-        margin-left: 0;
-    }
-}
-/*https://www.migueltroyano.com/css/crear-un-carrusel-automatico-en-html-y-css-sin-javascript/*/
+
