--- a/Proyecto/stylesP.css
+++ b/Proyecto/stylesP.css
@@ -79,7 +79,7 @@ align-items: center;
     width: 150px;
     height: 150px;
     object-fit: cover;
-
+}
 #Timg{
     display: flex;
     justify-content: center;
