--- a/Practicas/validaciones/styles.css
+++ b/Practicas/validaciones/styles.css
@@ -3,7 +3,7 @@ body{
     background-color: bisque;
 }
 div{
-    background-color: greenyellow;
+    background-color: rgb(5, 150, 5);
     width: 30%;
     height: 100%;
     margin-left: auto;
@@ -12,14 +12,15 @@ div{
     box-shadow: 3px 6px green;
     
    border-radius: 4px ;
-   margin-top: 100px;
-   margin-bottom: 100px;
-   padding-bottom: 30px;
+   margin-top: 200px;
+   margin-bottom: 200px;
+   padding-bottom: 100px;
 }
 h1{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    padding-top: 30px;
+    padding-top: 40px;
+   font-weight: bold;
     
 
 }
